2010-07-19  Sergio Martin <sergio.martin@artica.es>

	* include/functions_db.php: Fixed an index error of
	groups array.

2010-07-18  Miguel de Dios  <miguel.dedios@artica.es>

	* include/auth/mysql.php: added function "get_users" the check to $order
	parameter if it is array, extract the field and order.
	
	* operation/users/user.php, godmode/users/user_list.php: added posibility to
	sort by columns ID User, Full name or Last Contanct.

2010-07-18  Raúl Mateos  <raulofpandora@gmail.com>

	* operation/incidents/incident_detail.php: Change Add button to links.

	* godmode/alerts/alert_list.list.php: Centered images.

	* godmode/alerts/configure_alert_action: Added link to create command.

2010-07-16  Sergio Martin <sergio.martin@artica.es>

	* pandoradb_data.sql: Fixed the default data inserting the
	new colum of tgrupo "propagate"

2010-07-16  Miguel de Dios  <miguel.dedios@artica.es>

	* operation/agentes/networkmap.php: fixed the pass to parameters between
	fullscreen and windowed mode.
	Fixes: #3013769

2010-07-16  Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/reporting/reporting_builder.php: fixed lost name of report when
	delete any element of this element.
	Fixes: #3025352

2010-07-16  Raúl Mateos  <raulofpandora@gmail.com>

	* operation/incidents/incident.php: Put create button on the right.

2010-07-15  Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/gis_maps/configure_gis_map.php: fixed typo in the tip.
	Fixes: #3029895

2010-07-15  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_html.php: added the function "print_select_groups" to
	print the field select box for groups with tree style.
	
	* include/functions_db.php: in function "get_user_groups" added test to
	false value in parameter $privilege for get all groups without ACL test.
	Fixed in function "get_user_groups_tree" the call to "get_user_groups" with
	the correct parameters.
	
	* operation/incidents/incident.php, operation/incidents/incident_detail.php,